# voms-gnome-applet

./: CMakeLists.txt
cmake/Modules/: FindLibNotifymm.cmake  FindgLite.cmake
debian/: changelog  control  rules
icons/: CMakeLists.txt
misc/: CMakeLists.txt  voms-gnome-applet-autostart.desktop  voms-gnome-applet.desktop
src/: CMakeLists.txt  Makefile  authvochooser.glade  basic.glade  config.h.cmake  contact.glade  introspect-service.xml  policy.glade  preferences.glade  voms-applet-config.cpp  voms-applet-config.h  voms-applet-contacts.cpp  voms-applet-policies.cpp  voms-applet-vodir.cpp  voms-applet.cpp  voms-applet.h  voms-client-engine.cpp  voms-client-engine.h  voms-dbus-manager.cpp  voms-dbus-manager.h  voms-global-defs.h  voms-icons-factory.cpp  voms-icons-factory.h  voms-server-list.cpp  voms-server-list.h
src/proxyman/: CMakeLists.txt  credentials.c  credentials.h  oldgaa_utils.c  proxycertinfo.c  proxyman.cpp  proxyman.h  proxyman_err.cpp  proxyman_err.h  replace.h  sslutils.c  sslutils.h
